Fix #106760: Cycles OSL boolean socket not working

Pull Request: https://projects.blender.org/blender/blender/pulls/109576