source/blender/gpu/intern/gpu_node_graph.cc
@@ -168,9 +168,10 @@ static void gpu_node_input_link(GPUNode *node, GPUNodeLink *link, const eGPUType
 static const char *gpu_uniform_set_function_from_type(eNodeSocketDatatype type)
 {
   switch (type) {
-    /* For now INT is supported as float. */
+    /* For now INT & BOOL are supported as float. */
     case SOCK_INT:
     case SOCK_FLOAT:
+    case SOCK_BOOLEAN:
       return "set_value";
     case SOCK_VECTOR:
       return "set_rgb";
